@@ -1,3 +1,11 @@
+2000-09-07  Ryan Yeske  <rcyeske@vcn.bc.ca>
+
+	* nethack-api.el (nethack-api-delay-output): implemented.
+	(nethack-api-outrip): implemented.
+	(nethack-api-wait-synch): implemented.
+	(nethack-api-start-menu): implemented.
+	(nethack-api-yn-function): implemeneted.
+
 2000-08-20  Ryan Yeske  <rcyeske@vcn.bc.ca>
 
 	* nethack-api.el: changed all retvals to 'unimplemented for
